test/fixtures/diagnostics/type-checker/negative/enum-composite-invalid/input.tysh
namespace Samples.TypeChecker.EnumCompositeInvalid

enum Flags : byte {
  None = 0,
  Read = 1,
  ComboMissing = Read | Write,
  ComboForward = Later | Read,
  ComboSelf = ComboSelf | Read,
  Later = 2
}
